Bug 426392 - Crash in nsXULPopupManager::ShowPopupCallback when customizing toolbar on OS X, patch by Chris Pearce (chris@pearce.org.nz), r+sr=roc, a=blocker