layout/xul/base/src/nsXULPopupManager.cpp
@@ -523,9 +523,13 @@ CheckCaretDrawingState(nsIDocument *aDocument) {
     return;
 
   nsIPresShell* presShell = focusedDoc->GetPrimaryShell();
+  if (!presShell)
+    return;
 
   nsCOMPtr<nsICaret> caret;
   nsresult res = presShell->GetCaret(getter_AddRefs(caret));
+  if (!caret)
+    return;
   caret->CheckCaretDrawingState();
 
 }
